==> Cc19245/xinluyao_FOC/BSP/LED/bsp_led.c <==
/*
 * led driver.
 *
 * Copyright (C) 2019 XinLuYao, Inc. All Rights Reserved.
 * Written by quantum (quantum@whxinluyao.com)
 * Website: www.whxinluyao.com
 * 技术讨论QQ群: 680440867 
 */
 
#include "bsp_led.h"

 

void bsp_led_init(void)
{
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOE, ENABLE);

	GPIO_InitTypeDef  GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOE, &GPIO_InitStructure);
	GPIO_SetBits(GPIOE, GPIO_Pin_4);
}
 
void bsp_led_on(void)
{
	GPIO_ResetBits(GPIOE, GPIO_Pin_4);
}

void bsp_led_off(void)
{
	GPIO_SetBits(GPIOE, GPIO_Pin_4);
}
